# Bone-supression-models

./: .gitignore  MODEL_CARD.md  README.md  app.py  app_requirements.txt.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: model_registry.json
docs/: dataset.md  development.md  evaluation.md  index.md  inference.md  models.md  provenance.md  results.md  training.md
docs/results/retrained_v1/: corrected_mso_summary.json  gan_mso2_corrected_mso_manifest.json  gan_mso2_corrected_mso_metrics.json  gan_mso2_corrected_mso_run_summary.json  gan_mso2_corrected_mso_test_steps_metrics_gpu.json  gan_mso2_manifest.json  gan_mso2_run_summary.json  gan_mso2_steps_metrics_summary.json  gan_mso2_steps_metrics_summary_gpu.json  gan_mso2_steps_run_summary_gpu.json  gan_mso2_test_metrics.json  gan_mso2_test_steps_metrics.json  (+10 more)
model requirement/: allRequiriments.txt  gan_mso2_requiremets.txt
models/: README.md  models.txt
notebooks/: kaggle_retrain_bone_suppression.ipynb
requirements/: base.txt  dev.txt  gan-mso2.txt  legacy-all.txt  unet-resnet50.txt
scripts/: kaggle_retrain.py
src/bone_suppression/: __init__.py  artifacts.py  cli.py  dataset.py  evaluation.py  gradio_app.py  inference.py  metrics.py  model_io.py  preprocessing.py  registry.py  repro_cli.py  training.py
tests/: test_artifacts.py  test_cli.py  test_dataset.py  test_evaluation.py  test_gradio_app.py  test_inference.py  test_metrics.py  test_model_io.py  test_preprocessing.py  test_registry.py  test_repro_cli.py  test_training.py
train scripts/: train.txt  unet_50_rquirements.txt
(+2 files in other folders)
