[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bone-suppression-models"
version = "0.1.0"
description = "Research-oriented utilities for chest X-ray bone suppression inference."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ernesto Sant" }
]
dependencies = [
  "gradio>=3.0",
  "numpy>=1.21",
  "opencv-python-headless>=4.5",
  "Pillow>=9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]
gan = [
  "tensorflow>=2.6"
]
unet = [
  "fastai>=2.5",
  "torch>=1.9",
  "torchvision>=0.10",
  "wwf>=0.0.5"
]

[project.scripts]
bone-suppression = "bone_suppression.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bone_suppression = ["resources/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
